--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "numerosPerfectos",
+  "name": "Numeros_Perfectos",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
